assets/scss/partials/nav.scss
.navbar-brand img {
  max-width: 300px;
  
}
nav {
  .nav-link {
    color: black;
    font-size: 1.25rem;
    padding-left: 37px !important;

    &:hover {
      color: $brand-color;
    }
  }

  .navbar-brand:hover {
    border-color: white;
  }
}
.nav-logo {
    max-width: 200px;
}
@media (min-width: 768px) {
    .menu-wrap {
        display: none;
    }
    .navbar-brand {
      font-size: 0.95rem !important;
      text-align: center;
    }
    }
@media (max-width: 768px) {
  .desktopmenu  {
    display: none !important;
}
}
/* MENU STYLES */
    
    .menu-wrap {
        position: fixed;
        top: 0;
        right: 0;
        z-index: 1;
      }
      .menu-wrap .toggler {
        position: absolute;
        top: 15px;
        right: 10px;
        z-index: 2;
        cursor: pointer;
        width: 50px;
        height: 50px;
        opacity: 0;
      }
      
      .menu-wrap .hamburger {
        position: absolute;
        top: 15px;
        right: 10px;
        z-index: 1;
        width: 55px;
        height: 55px;
        padding: 1rem;
        background: white;
        box-shadow: 0 0 15px 5px rgba(0,0,0,0.2);
        display: flex;
        align-items: center;
        justify-content: center;
      }
      
      /* Hamburger Line */
      .menu-wrap .hamburger > div {
        position: relative;
        flex: none;
        width: 100%;
        height: 2px;
        background: black;
        display: flex;
        align-items: center;
        justify-content: center;
        transition: all 0.4s ease;
      }
      
      /* Hamburger Lines - Top & Bottom */
      .menu-wrap .hamburger > div::before,
      .menu-wrap .hamburger > div::after {
        content: '';
        position: absolute;
        z-index: 1000;
        top: -10px;
        width: 100%;
        height: 2px;
        background: inherit;
      }
      
      /* Moves Line Down */
      .menu-wrap .hamburger > div::after {
        top: 10px;
      }
      
      /* Toggler Animation */
      .menu-wrap .toggler:checked + .hamburger > div {
        transform: rotate(135deg);
      }
      
      /* Turns Lines Into X */
      .menu-wrap .toggler:checked + .hamburger > div:before,
      .menu-wrap .toggler:checked + .hamburger > div:after {
        top: 0;
        transform: rotate(90deg);
      }
      
      /* Rotate On Hover When Checked */
      .menu-wrap .toggler:checked:hover + .hamburger > div {
        transform: rotate(225deg);
      }
      
      /* Show Menu */
      .menu-wrap .toggler:checked ~ .menu {
        visibility: visible;
      }
      
      .menu-wrap .toggler:checked ~ .menu > div {
        transform: scale(1);
        transition-duration: var(--menu-speed);
      }
      
      .menu-wrap .toggler:checked ~ .menu > div > div {
        opacity: 1;
        transition:  opacity 0.2s ease 0.2s;
      }
      
      .menu-wrap .menu {
        position: fixed;
        top: 0;
        right: 2px;
        width: 100%;
        height: 100%;
        visibility: hidden;
        overflow: hidden;
        display: flex;
        align-items: center;
        justify-content: center;
      }
      
      .menu-wrap .menu > div {
        background: $brand-color;
        border-radius: 20%;
        width: 200vw;
        height: 200vw;
        display: flex;
        flex: none;
        align-items: center;
        justify-content: center;
        transform: scale(0);
        transition: all 0s ease;
        padding-right: 25px;
        z-index: 19500;
      }
      
      .menu-wrap .menu > div > div {
        text-align: center;
        max-width: 95vw;
        max-height: 100vh;
        opacity: 0;
        transition: opacity 0.2s ease;
      }
      
      .menu-wrap .menu > div > div > ul > li {
        list-style: none;
        color: #fff;
        padding: 1rem;
      }
      
      .menu-wrap .menu > div > div > ul > li > a {
        color: inherit;
        text-decoration: none;
        transition: color 0.2s ease;
      }
      #scroll {
        z-index: 9999;
        position:fixed;
        right:50px;
        bottom:50px;
        cursor:pointer;
        width:50px;
        height:50px;
        background-color:$brand-color;
        text-indent:-9999px;
        display:none;
        -webkit-border-radius:60px;
        -moz-border-radius:60px;
        border-radius:60px
    }
    #scroll span {
        position:absolute;
        top:50%;
        left:50%;
        margin-left:-8px;
        margin-top:-12px;
        height:0;
        width:0;
        border:8px solid transparent;
        border-bottom-color:#ffffff;
    }
    #scroll:hover {
        background-color:grey;
        opacity:1;filter:"alpha(opacity=100)";
        -ms-filter:"alpha(opacity=100)";
    }
    @media (max-width: 768px) {
        #scroll {
            right:10px;
            bottom:40px;
        }
    }
    @media only screen and (max-width: 768px)  {
      .nav-link {
        font-size: 32px !important;
        font-weight: 400;
      }
    }

